fixed FE bugs and updated FE design
